UI3 수진님 코드에서 레시피/리포트 병합